--- a/css/header.css
+++ b/css/header.css
@@ -2,6 +2,7 @@
 header {
   /* Instead of setting it 100vh, set it to 95vh so that we just almost stretch to the end */
   height: 95vh;
+  position: relative;
   /* First render the gradient and the image */
   background-image: linear-gradient(
       to right bottom,
@@ -23,4 +24,96 @@ header {
   bottom left corner x coordinate'd be 0 back to beginning, y is 100% to the bottom
   */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo {
+  margin: 40px 0 0 40px;
+}
+
+.logo {
+  height: 35px;
+}
+
+.text-box {
+  position: absolute;
+  /* This shifts the element to the left and from top by 50% */
+  top: 40%;
+  left: 50%;
+
+  /* 
+  The left and top will make the element start from the specified position 
+  due to which the element will not actually be placed in the center. The element positioning will start from the center.
+
+  Hence, we translate (shifted) the element 50% from the current position towards the back in X and Y axis to place it in the center
+  */
+  transform: translate(-50%, -50%);
+}
+
+.heading-primary {
+  color: var(--white);
+  text-transform: uppercase;
+  text-align: center;
+
+  /* 
+    Though this hides the 'back' side of the transformed element,
+    it also avoids the shaky behavior while animating an element.
+    Reasons are yet unknown
+  */
+  backface-visibility: hidden;
+}
+
+.heading-primary span {
+  display: block;
+}
+
+.heading-primary-main {
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 35px;
+
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+.heading-primary-sub {
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 17.4px;
+
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+@keyframes moveInLeft {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes moveInRight {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
 }
