--- a/css/main.css
+++ b/css/main.css
@@ -1,48 +1,59 @@
-/*
-COLORS:
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  /* Use inheritance rather than applying style via universal selectors */
+  box-sizing: inherit; }
 
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
+html {
+  /* Setting font-size in pixels is a bad practice */
+  /* This will hinder with the settings of people who would like to set their own user stylesheet and set their default font-size */
+  /* Hence, specify in percentage */
+  /* font-size: 10px; */
+  /* The child lengths (padding, width, margin, etc) and font-sizes should use rem to refer to this value*/
+  font-size: 62.5%; }
 
-*/
-/* Header CSS Style */
-.header {
-  /* Instead of setting it 100vh, set it to 95vh so that we just almost stretch to the end */
-  height: 95vh;
-  position: relative;
-  /* First render the gradient and the image */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
-  background-size: cover;
-  /* The top remains the same while the bottom gets cropped */
-  background-position: top;
-  /* 
-  top left corner x y coordinate is 0 0, 
-  
-  top right corner x coordinate'd be 100% towards right. y didn't change, so 0 
-  
-  bottom right corner x coordinate'd be 100% towards right, y is 200px towards bottom
+/* Everything related to the font should either be applied to the body or html */
+body {
+  padding: 3rem;
+  box-sizing: border-box; }
 
-  bottom left corner x coordinate'd be 0 back to beginning, y is 100% to the bottom
-  */
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-  .header__logo-box {
-    padding: 4rem 0 0 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    /* This shifts the element to the left and from top by 50% */
-    top: 40%;
-    left: 50%;
-    /* 
-  The left and top will make the element start from the specified position 
-  due to which the element will not actually be placed in the center. The element positioning will start from the center.
+@keyframes moveInLeft {
+  0% {
+    transform: translateX(-10rem);
+    opacity: 0; }
+  80% {
+    transform: translateX(1rem); }
+  100% {
+    transform: translateX(0);
+    opacity: 1; } }
 
-  Hence, we translate (shifted) the element 50% from the current position towards the back in X and Y axis to place it in the center
-  */
-    transform: translate(-50%, -50%);
-    text-align: center; }
+@keyframes moveInRight {
+  0% {
+    transform: translateX(10rem);
+    opacity: 0; }
+  80% {
+    transform: translateX(-1rem); }
+  100% {
+    transform: translateX(0);
+    opacity: 1; } }
+
+@keyframes moveInBtn {
+  0% {
+    transform: translateY(3rem);
+    opacity: 0; }
+  100% {
+    transform: translateY(0);
+    opacity: 1; } }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  /* 1.7 times bigger than the predefined line-height */
+  line-height: 1.7;
+  color: #777; }
 
 .heading-primary {
   color: #fff;
@@ -71,26 +82,6 @@ Dark green: #28b485
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-out; }
-
-@keyframes moveInLeft {
-  0% {
-    transform: translateX(-10rem);
-    opacity: 0; }
-  80% {
-    transform: translateX(1rem); }
-  100% {
-    transform: translateX(0);
-    opacity: 1; } }
-
-@keyframes moveInRight {
-  0% {
-    transform: translateX(10rem);
-    opacity: 0; }
-  80% {
-    transform: translateX(-1rem); }
-  100% {
-    transform: translateX(0);
-    opacity: 1; } }
 
 .btn {
   /* link is a pseudo class which says that the anchor is a link */
@@ -141,37 +132,40 @@ Dark green: #28b485
     /* Adds the style of 0% to the element */
     animation-fill-mode: backwards; }
 
-@keyframes moveInBtn {
-  0% {
-    transform: translateY(3rem);
-    opacity: 0; }
-  100% {
-    transform: translateY(0);
-    opacity: 1; } }
+/* Header CSS Style */
+.header {
+  /* Instead of setting it 100vh, set it to 95vh so that we just almost stretch to the end */
+  height: 95vh;
+  position: relative;
+  /* First render the gradient and the image */
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  background-size: cover;
+  /* The top remains the same while the bottom gets cropped */
+  background-position: top;
+  /* 
+  top left corner x y coordinate is 0 0, 
+  
+  top right corner x coordinate'd be 100% towards right. y didn't change, so 0 
+  
+  bottom right corner x coordinate'd be 100% towards right, y is 200px towards bottom
 
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  /* Use inheritance rather than applying style via universal selectors */
-  box-sizing: inherit; }
+  bottom left corner x coordinate'd be 0 back to beginning, y is 100% to the bottom
+  */
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header__logo-box {
+    padding: 4rem 0 0 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    /* This shifts the element to the left and from top by 50% */
+    top: 40%;
+    left: 50%;
+    /* 
+  The left and top will make the element start from the specified position 
+  due to which the element will not actually be placed in the center. The element positioning will start from the center.
 
-html {
-  /* Setting font-size in pixels is a bad practice */
-  /* This will hinder with the settings of people who would like to set their own user stylesheet and set their default font-size */
-  /* Hence, specify in percentage */
-  /* font-size: 10px; */
-  /* The child lengths (padding, width, margin, etc) and font-sizes should use rem to refer to this value*/
-  font-size: 62.5%; }
-
-/* Everything related to the font should either be applied to the body or html */
-body {
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  /* 1.7 times bigger than the predefined line-height */
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem;
-  box-sizing: border-box; }
+  Hence, we translate (shifted) the element 50% from the current position towards the back in X and Y axis to place it in the center
+  */
+    transform: translate(-50%, -50%);
+    text-align: center; }
