--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -5,3 +5,7 @@ $color-black: #000;
 $color-primary-light: #7ed56f;
 $color-primary: #55c57a;
 $color-primary-dark: #28b485;
+
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
