--- a/sass/abstract/_variables.scss
+++ b/sass/abstract/_variables.scss
@@ -1,4 +1,6 @@
+$color-gray-light-1: #f7f7f7;
 $color-gray-dark: #777;
+
 $color-white: #fff;
 $color-black: #000;
 
@@ -9,3 +11,5 @@ $color-primary-dark: #28b485;
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+$default-font-size: 1.6rem;
