--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -6,6 +6,7 @@
 
 .section-features {
   padding: 20rem 0;
+  margin-top: -10rem;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
@@ -13,4 +14,15 @@
     ),
     url("../../img/nat-4.jpg");
   background-size: cover;
+  transform: skewY(-7deg);
+
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tours {
+  background-color: $color-gray-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
 }
