--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -41,6 +41,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   /* Transition is added to initial state */
   &::after {
     content: "";
